--- a/src/qtui/scss/master.scss
+++ b/src/qtui/scss/master.scss
@@ -7,6 +7,7 @@
 @import "./partials/opacity.scss";
 @import "./partials/typography";
 @import "./partials/alert";
+@import "./partials/dropdown";
 @import "./partials/ant";
 // icons
 @import "./icons/ionicons";
