--- a/src/qtui/scss/partials/_variables.scss
+++ b/src/qtui/scss/partials/_variables.scss
@@ -210,14 +210,51 @@ $sidenav-dark-menu-bg: rgba(0, 0, 0, 0.1) !default;
 $sidenav-light-border-color: rgba(255, 255, 255, 0.2) !default;
 $sidenav-light-menu-bg: rgba(0, 0, 0, 0.2) !default;
 
-@mixin keyframes($name) {
-    @-webkit-keyframes #{$name} {
-        @content;
-    }
-    @-moz-keyframes #{$name} {
-        @content;
-    }
-    @keyframes #{$name} {
-        @content;
-    }
-}
+// *******************************************************************************
+// * Components
+
+$border-color: $gray-100 !default;
+$border-width: 0px !default;
+
+$border-radius: 0.125rem !default;
+$border-radius-xl: $border-radius !default;
+$border-radius-lg: $border-radius !default;
+$border-radius-sm: $border-radius !default;
+$border-radius-xs: $border-radius !default;
+
+$component-line-height: 1.54 !default;
+$component-focus-shadow-width: 0 !default;
+
+$material-component-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.07),
+    0px 4px 5px 0px rgba(0, 0, 0, 0.05), 0px 1px 10px 0px rgba(0, 0, 0, 0.03) !default;
+
+$floating-component-border-color: rgba($black, 0.05) !default;
+$floating-component-shadow: $material-component-shadow !default;
+
+$hr-border-width: 1px !default;
+$hr-border-color: $border-color !default;
+
+$bordered-row-border-color: $hr-border-color !default;
+
+$caret-width: 0.42em !default;
+
+// *******************************************************************************
+// * Dropdowns
+
+$dropdown-padding-y: 0.3125rem !default;
+$dropdown-divider-bg: $floating-component-border-color !default;
+$dropdown-box-shadow: $floating-component-shadow !default;
+
+$dropdown-item-padding-y: 0.5rem !default;
+$dropdown-item-padding-x: 1.25rem !default;
+
+$dropdown-link-color: $body-color !default;
+$dropdown-link-hover-color: $dropdown-link-color !default;
+$dropdown-link-hover-bg: $gray-50 !default;
+$dropdown-link-line-height: $component-line-height !default;
+$dropdown-link-active-color: $body-color !default;
+$dropdown-link-active-bg: $gray-50 !default;
+
+$dropdown-link-disabled-color: $text-lighter !default;
+
+$dropdown-header-color: $text-muted !default;
