--- a/src/qtui/scss/partials/_mixin.scss
+++ b/src/qtui/scss/partials/_mixin.scss
@@ -231,3 +231,16 @@
         @content;
     }
 }
+
+// 至少具有最小断点宽度的Media，不查询最小的断点。
+// 使@content适用于给定的断点且更宽。
+@mixin media-breakpoint-up($name, $breakpoints: $grid-breakpoints) {
+    $min: breakpoint-min($name, $breakpoints);
+    @if $min {
+        @media (min-width: $min) {
+            @content;
+        }
+    } @else {
+        @content;
+    }
+}
