--- a/src/qtui/scss/master.scss
+++ b/src/qtui/scss/master.scss
@@ -15,4 +15,7 @@
 
 @import "./partials/sidenav";
 @import "./partials/app-brand";
+@import "./partials/breadcrumb";
+@import "./partials/card";
 @import "./partials/auth.scss";
+@import "./partials/response";
