--- a/src/qtui/scss/partials/_functions.scss
+++ b/src/qtui/scss/partials/_functions.scss
@@ -92,3 +92,12 @@
         border: $border
     );
 }
+
+// 断点最小宽度。最小(第一个)断点为空。
+//
+//    >> breakpoint-min(sm, (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px))
+//    576px
+@function breakpoint-min($name, $breakpoints: $grid-breakpoints) {
+    $min: map-get($breakpoints, $name);
+    @return if($min != 0, $min, null);
+}
