--- a/src/qtui/scss/partials/_functions.scss
+++ b/src/qtui/scss/partials/_functions.scss
@@ -1,7 +1,8 @@
+// 去掉变量的单位
 @function strip-unit($num) {
     @return $num / ($num * 0 + 1);
 }
-
+// RGBA颜色转Hex颜色
 @function rgba-to-hex($color, $background: #fff) {
     @if $color and alpha($color) != 1 {
         $percent: alpha($color) * 100%;
@@ -11,6 +12,10 @@
     } @else {
         @return $color;
     }
+}
+// 单位转换 px => rem
+@function px-to-rem($value) {
+    @return (strip-unit($value) / 16) * 1rem;
 }
 @function yiq-value($color) {
     @if $color == transparent {
@@ -93,11 +98,8 @@
     );
 }
 
-// 断点最小宽度。最小(第一个)断点为空。
-//
-//    >> breakpoint-min(sm, (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px))
-//    576px
-@function breakpoint-min($name, $breakpoints: $grid-breakpoints) {
+// 获取断点指定名称的断点，如不存在返回空。默认的断点为$grid-breakpoints
+@function get-breakpoint($name, $breakpoints: $grid-breakpoints) {
     $min: map-get($breakpoints, $name);
     @return if($min != 0, $min, null);
 }
