--- a/src/qtui/scss/partials/_sidenav.scss
+++ b/src/qtui/scss/partials/_sidenav.scss
@@ -387,3 +387,18 @@
         white-space: nowrap;
     }
 }
+.navbar-search-box {
+    .ant-input-search,
+    .ant-input-search input {
+        background: transparent;
+        border: none;
+        color: #fff;
+    }
+    .ant-input-search-icon {
+        color: #fff;
+    }
+    input::placeholder {
+        color: $input-inverted-placeholder-color;
+        font-size: px-to-rem(14px);
+    }
+}
