--- a/src/qtui/scss/partials/_core.scss
+++ b/src/qtui/scss/partials/_core.scss
@@ -100,3 +100,7 @@ a {
     width: 30px !important;
     height: auto;
 }
+.number {
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+}
