feat:默认dashboard页面布局已完成

--- a/src/qtui/scss/partials/_ant.scss
+++ b/src/qtui/scss/partials/_ant.scss
@@ -19,4 +19,13 @@
             font-size: $qt-font-size-base;
         }
     }
+    &-table {
+        &-tbody {
+            tr {
+                td {
+                    font-size: px-to-rem(12px);
+                }
+            }
+        }
+    }
 }
