--- a/src/qtui/scss/partials/_card.scss
+++ b/src/qtui/scss/partials/_card.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 .card {
     border: 0px solid rgba(24, 28, 33, 0.06);
     border-radius: 0.125rem;
@@ -32,8 +33,8 @@
 }
 
 .card-header.with-elements {
-    padding-top: $card-spacer-y / 2;
-    padding-bottom: $card-spacer-y / 2;
+    padding-top: math.div($card-spacer-y, 2);
+    padding-bottom: math.div($card-spacer-y, 2);
 }
 .card-header-elements,
 .card-title-elements {
@@ -49,7 +50,7 @@
 }
 
 .card-header-title {
-    padding: ($card-spacer-y / 2) 0;
+    padding: math.div($card-spacer-y, 2) 0;
 }
 
 .card-header-elements {
